# AIImplementations

./: .gitignore  README.md
DecisionTree/: CMakeLists.txt
DecisionTree/include/: decisionTree.hpp  mnistParsing.hpp  node.hpp  utils.hpp  utils.inl
DecisionTree/src/: main.cpp  mnistParsing.cpp
KDay/: CMakeLists.txt
KDay/include/image/: image.hpp  image.inl  kernel.hpp
KDay/plot/: data.pt  pred.pt
KDay/src/: image.cpp  kday.cpp  kscene.cpp
KerasTest/: main.py  out.txt  resumenDataset.txt
NeuralNetworks/: CMakeLists.txt  README.md
NeuralNetworks/include/: perceptron.hpp
NeuralNetworks/src/: main.cpp  perceptron.cpp
